adjust tests and config

--- a/tests/test_files/training_campaign_1.yaml
+++ b/tests/test_files/training_campaign_1.yaml
@@ -10,9 +10,9 @@ max_abs_rel_change: 0.1
 n_rounds_series: 5
 n_iterations_training: 50
 side: 0
-initial_boards:
+initial_board_fens:
   - '8/8/8/7q/2K2kqq/8/8/8 w - - 0 1'
 logger:
   - class: DataFileLogger
-    data_file_path: '/data/chessAI/training/my_random_walk_example.csv'
+    data_file_path: 'my_random_walk_example.csv'
     append: True
